add : add LLM select